--- a/src/css/ServicesCard.css
+++ b/src/css/ServicesCard.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  color: #272727;
+  color: #ffffff;
   font-family: "Quicksand", serif;
   font-style: normal;
   font-weight: 400;
