--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,43 @@
 body {
-  background: linear-gradient(
-    109.6deg,
-    rgba(0, 0, 0, 0.93) 11.2%,
-    rgb(63, 61, 61) 78.9%
+  background: radial-gradient(
+    circle at -4% -12.9%,
+    rgb(74, 98, 110) 0.3%,
+    rgb(30, 33, 48) 90.2%
   );
+}
+
+.nav-header {
+  color: rgb(236, 230, 230);
+  font-family: "Open Sans", sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 0.3em;
+  line-height: 1;
+  text-align: center;
+}
+
+.header {
+  color: rgb(255, 255, 255);
+  font-family: "Open Sans", sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 32px;
+  margin: 0 0 72px;
+  text-align: center;
+}
+
+.p-text {
+  color: #ffffff;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  margin: 0 0 24px;
+}
+
+.caption-text {
+  color: #ffffff;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 12px;
+  line-height: 24px;
+  margin: 0 0 24px;
 }
