added accordion for services, icons styling, state management

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
     rgb(74, 98, 110) 0.3%,
     rgb(30, 33, 48) 90.2%
   );
+
+  height: 100%;
 }
 
 .nav-header {
@@ -40,4 +42,13 @@ body {
   font-size: 12px;
   line-height: 24px;
   margin: 0 0 24px;
+}
+
+.icon-color {
+  color: red;
+}
+
+.icon-margin {
+  margin-left: 1em;
+  color: rgb(255, 255, 255);
 }
