--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     rgb(30, 33, 48) 90.2%
   );
 
-  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-header {
@@ -29,11 +30,13 @@ body {
 }
 
 .title-text {
-  color: #ffffff;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  margin: 0 0 24px;
+  color: rgb(236, 230, 230);
+  font-family: "Open Sans", sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 0.3em;
+  line-height: 1;
+  text-align: center;
 }
 
 .p-text {
@@ -76,3 +79,16 @@ body {
     rgb(83, 87, 112) 90.2%
   );
 }
+
+/* .div-body {
+  background: radial-gradient(
+    circle at -4% -12.9%,
+    rgb(155, 171, 179) 0.3%,
+    rgb(83, 87, 112) 90.2%
+  );
+
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+} */
