--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,46 +1,16 @@
-nav {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(74, 98, 110) 0.3%,
-    rgb(30, 33, 48) 90.2%
-  );
-  padding: 10px 0;
-}
-
-header {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(74, 98, 110) 0.3%,
-    rgb(30, 33, 48) 90.2%
-  );
-  height: 8em;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  margin-left: 2em;
-  margin-right: 0;
+ul.nav-ul {
   display: flex;
+  flex-direction: row;
 }
 
-nav li {
-  display: inline;
-  margin-right: 2em;
-  font-size: 36px;
-  letter-spacing: 0.15em;
-}
-
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.nav-title {
+ul.nav-ul li {
+  padding-right: 3em;
   font-size: 1em;
-  padding-bottom: 1em;
+  color: #0065c1;
+  font-weight: bold;
+}
+
+p.logo-style-secondary {
+  color: #0065c1;
+  font-weight: bold;
 }
