--- a/src/index.css
+++ b/src/index.css
@@ -1,94 +1,6 @@
 body {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(74, 98, 110) 0.3%,
-    rgb(30, 33, 48) 90.2%
-  );
-
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
-}
-
-.nav-header {
-  color: rgb(236, 230, 230);
-  font-family: "Open Sans", sans-serif;
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 0.3em;
-  line-height: 1;
-  text-align: center;
-}
-
-.header {
-  color: rgb(255, 255, 255);
-  font-family: "Open Sans", sans-serif;
-  font-size: 36px;
-  font-weight: 300;
-  line-height: 32px;
-  margin: 0 0 72px;
-  text-align: center;
-}
-
-.title-text {
-  color: rgb(236, 230, 230);
-  font-family: "Open Sans", sans-serif;
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 0.3em;
-  line-height: 1;
-  text-align: center;
-}
-
-.p-text {
-  color: #ffffff;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  margin: 0 0 24px;
-}
-
-.caption-text {
-  color: #ffffff;
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  line-height: 24px;
-  margin: 0 0 24px;
-}
-
-.icon-color {
-  color: red;
-}
-
-.icon-margin {
-  margin-left: 1em;
-  color: rgb(255, 255, 255);
-}
-
-.btn-style {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(74, 98, 110) 0.3%,
-    rgb(30, 33, 48) 90.2%
-  );
-}
-
-.active-btn {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(155, 171, 179) 0.3%,
-    rgb(83, 87, 112) 90.2%
-  );
-}
-
-/* .div-body {
-  background: radial-gradient(
-    circle at -4% -12.9%,
-    rgb(155, 171, 179) 0.3%,
-    rgb(83, 87, 112) 90.2%
-  );
-
-  height: 100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
-} */
+}
