--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,11 +1,3 @@
-footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #0065c1;
-}
-
 .item-style {
   background-color: #0065c1;
 }
@@ -44,4 +36,8 @@ li.foot-links:hover {
 
 .caption-style {
   font-size: 0.75em;
+}
+
+.footer {
+  position: sticky;
 }
